# FFmpegPaly

./: README.md
app/: build.gradle
app/src/main/java/com/ffmpeg/: MainActivity.java  Play.java
app/src/main/jni/: CMakeLists.txt  FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideo.cpp  Player.cpp  native-lib.cpp  player_jni.cpp
app/src/main/res/layout/: activity_main.xml
